Reviews now sorted corrrectly

--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -2,7 +2,7 @@
 <div class='container-profile'>
   <div class='container-profile2'>
     <div class='image-links image'>
-    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSOUOUQt7cd1PoaYLJdl6B5S1zT9rsqVbXCOR1mfivtdKesVqjRMw" alt="" class='image-fluid' style='border-radius: 100px;'>
+    <img src="src={{user.imageUrl}}" alt="" class='image-fluid' style='border-radius: 100px;'>
     </div>
     <div class='tutor-info'>
       <h3 class="card-title">{{user.first}} {{user.last}}</h3>
