--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,4 @@
-<form action="/users" method="post">
+<form action="/users" method="post" enctype="multipart/form-data">
 
 <div class="container-fluid section header">
     <div class="signup-content">
@@ -10,13 +10,13 @@
 
         <input type="text" id="user-last-name" name="last" class="form-control" placeholder="Last Name" autocomplete="off">
 
-        <input type="email" id="user-email" name="email" class="form-control" placeholder="janedoe@uni.edu" autocomplete="off">
+        <input type="email" id="user-email" name="email" class="form-control" placeholder="E-mail" autocomplete="off">
         
         <input type="text" name="username" class="form-control" id="user-username" placeholder="Username" maxlength="45" autocomplete="off">
 
         <input type="password" id="user-password" name="password" class="form-control" placeholder="Password" autocomplete="off">
 
-        <input type="tel" id="user-tel" name="tel" class="form-control" placeholder="000-000-0000" autocomplete="off">
+        <input type="tel" id="user-tel" name="tel" class="form-control" placeholder="Phone" autocomplete="off">
 
         <input type="text" id="user-school" name="school" class="form-control" placeholder="School" autocomplete="off">
 
@@ -30,9 +30,14 @@
         </div>
 
         <p>Please enter a comma separated list of classes you can tutor</p>
-        <textarea rows="7" cols="60" name='class' id='user-classes' placeholder='enter a comma separated list'>
+        <textarea rows="7" cols="60" name='class' id='user-classes' placeholder='Enter a comma separated list'>
 
         </textarea>
+
+        <div class="form-group">
+          
+          <input type="file" name="imageUrl" id='user-image' class='form-control' placeholder="Please Upload an Image">
+        </div>
         
         </div>
         <div class="text-center">
