--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -30,7 +30,7 @@
   
     {{{body}}}
    <footer class='text-center bottom-nav'>
-		<nav class='navbar sticky-bottom navbar-light bg-#7daeca'>
+		<nav class='navbar fixed-bottom navbar-light bg-#7daeca'>
 			<div class='container-fluid'>
 				<div class='navbar-text'>
 					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; Hermes Tutor</strong></p>
