--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -1,4 +1,4 @@
-<form action="/users" method="post" enctype="multipart/form-data">
+<form action="/users" method="post" enctype="multipart/form-data" class='signup'>
 
 <div class="container-fluid section header">
     <div class="signup-content">
