Image upload is done with a few other changes to the .env file

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,6 +11,7 @@
     <link rel='stylesheet' href='/stylesheets/style.css'/>
   </head>
   <body>
+    <div class='nav-bar'>
 <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-#7daeca">
       <div class="container-fluid navbar-container">
         <div class="left-nav">
@@ -27,10 +28,11 @@
         </div>
       </div>
     </nav>
+    </div>
   
     {{{body}}}
    <footer class='text-center bottom-nav'>
-		<nav class='navbar fixed-bottom navbar-light bg-#7daeca'>
+		<nav class='navbar fixed-bottom navbar-light bg-#7daeca navbar-expand-lg'>
 			<div class='container-fluid'>
 				<div class='navbar-text'>
 					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; Hermes Tutor</strong></p>
