--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -19,8 +19,8 @@
     <p class='card-text'>{{user.class}}</p>
   <div>
     <a href='/users/{{user._id}}' class='btn btn-dark'>View Profile</a>
-  <a href='/users/reviews/new' class='btn btn-dark'>Write A Review</a>
-  <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
+  {{!-- <a href='/users/reviews/new' class='btn btn-dark'>Write A Review</a>
+  <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a> --}}
 </div>
   </div>
 </div>
