--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -11,6 +11,10 @@ nav {
   background-color: #7daeca;
 }
 
+.nav-bar {
+  width: 100%;
+}
+
 .review-show-page {
   padding-bottom: 24px;
 }
@@ -121,8 +125,11 @@ a {
 }
 
 .image {
-  padding-top: 8px;
+  padding-left: 200px;
+  padding-top: 250px;
   padding-bottom:8px;
+  max-width: 1px;
+  max-height: 1px;
 } 
 
 .image-links {
