--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -2,7 +2,7 @@
 <div class='container-profile'>
   <div class='container-profile2'>
     <div class='image-links image'>
-    <img src="src={{user.imageUrl}}" alt="" class='image-fluid' style='border-radius: 100px;'>
+    <img src="{{user.imageUrl}}" alt="" class='image-fluid' style='border-radius: 100px;'>
     </div>
     <div class='tutor-info'>
       <h3 class="card-title">{{user.first}} {{user.last}}</h3>
@@ -11,8 +11,10 @@
     <p class='card-text'>{{user.tel}}</p>
     <p class='card-text'>{{user.class}}</p>
     {{!-- <a href='/users/{{user._id}}/edit' class='btn btn-dark'>Edit Profile</a> --}}
+    <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
     <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read {{user.first}}'s Reviews</a>
-     <div class="card-footer text-muted text-right">
+    <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
+     {{!-- <div class="card-footer text-muted text-right">
           <span class="points-span">{{user.points}} points </span>
 
           <div class="btn-group btn-group-sm">
@@ -26,13 +28,13 @@
             <button type="submit" class="upvote-button">+</button>
           </form>
           </div>
-        </div>
+        </div> --}}
     
     </div>
-    <div class='image-links'>
+    {{!-- <div class='image-links'>
       <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
       <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
-  </div>
+  </div> --}}
   </div>
 </div>
 </div>
