--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,11 +1,16 @@
-
 <header class='row'>
     <main class='container homepage'>
     <div class='text-center cardbox page'>
 		<div class='container-fluid justify-content-center'>
 			<div class='text-center'>
-				<h1>Hermes Tutor</h1>
+				<h1>Hermes Tutor
+                    <span class="typer" id="main" data-words="is great,is fun,is lightweight,is easy" data-colors="black" data-delay="100" data-deleteDelay="1000"></span>
+                    <span class="cursor" data-owner="main"></span>
+                </h1>
+                
 				<p>Platform connecting students who need tutoring, to those who can tutor them.</p>
+            {{#if currentUserId}}
+
             <div class='text-center'>
                 <div class="card justify-content-center" style="width: 30rem; height: 20rem">
                 <div class="card-body">
@@ -19,6 +24,8 @@
                     </div>
                 </form>
             </div>
+            {{/if}}
+
                 </div>         
             </div>
         </div>
@@ -27,3 +34,28 @@
         </div>
     </main>
 </header>
+{{!-- {{else}} --}}
+{{!-- <header class='row'>
+    <main class='container homepage'>
+    <div class='text-center cardbox page'>
+		<div class='container-fluid justify-content-center'>
+			<div class='text-center'>
+			<h1>Hermes Tutor
+                <span class="typer" id="main" data-words="great,fun,lightweight,easy" data-colors="white" data-delay="100" data-deleteDelay="1000"></span>
+                <span class="cursor" data-owner="main"></span>
+            </h1>
+			<p>Platform connecting students who need tutoring, to those who can tutor them.</p>
+            <div class='typer-test'></div>
+        </div>
+		</div>
+        </div>
+    </main>
+</header> --}}
+
+{{!-- {{/if}} --}}
+{{!-- <script>
+    typer('.typer-test')
+    .line('This function roolz.')
+    .back(5)
+    .continue('ules!');
+</script> --}}
