Voting system works correctly now

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -8,7 +8,7 @@
                     <span class="cursor" data-owner="main"></span>
                 </h1>
                 
-				<p>Platform connecting students who need tutoring, to those who can tutor them.</p>
+				<p>Platform connecting students with tutoring needs, to those who can tutor them.</p>
             {{#if currentUserId}}
 
             <div class='text-center'>
