--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -3,7 +3,6 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
@@ -13,28 +12,26 @@
     <script src="/javascripts/acc.js"/></script>
   </head>
   <body>
-    <div class='nav-bar'>
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-#7daeca">
-      <div class="container-fluid navbar-container">
-        <div class="left-nav">
-          <a href="/"><img src="/img/logo.png" alt="logo" class="navbar-brand"></a>
-        </div>
-        <div class="navbar-text">
-          {{#if currentUserId}}
-            <a class="navbar-link" href="/users/{{currentUserId}}/profile">Profile</a> |
-            <a class="navbar-link" href="/logout"><i class='fa fa-sign-out'></i>Log out</a>
-          {{else}}
-            <a class="navbar-link" href="/login"><i class='fa fa-user'></i>Log in</a> |
-            <a class="navbar-link" href="/users/new">Sign up</a>
-          {{/if}}
-        </div>
-      </div>
-    </nav>
-    </div>
   
+  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-#7daeca">
+    <div class="container-fluid navbar-container">
+      <div class="left-nav">
+        <a href="/"><img src="/img/logo.png" alt="logo" class="navbar-brand"></a>
+      </div>
+      <div class="navbar-text">
+        {{#if currentUserId}}
+          <a class="navbar-link" href="/users/{{currentUserId}}/profile">Profile</a> |
+          <a class="navbar-link" href="/logout"><i class='fa fa-sign-out'></i>Log out</a>
+        {{else}}
+          <a class="navbar-link" href="/login"><i class='fa fa-user'></i>Log in</a> |
+          <a class="navbar-link" href="/users/new">Sign up</a>
+        {{/if}}
+      </div>
+    </div>
+  </nav>
     {{{body}}}
-   <footer class='text-center bottom-nav'>
-		<nav class='navbar fixed-bottom navbar-light bg-#7daeca navbar-expand-lg'>
+  <footer class='text-center bottom-nav'>
+	  <nav class='navbar fixed-bottom navbar-light bg-#7daeca navbar-expand-lg'>
 			<div class='container-fluid'>
 				<div class='navbar-text'>
 					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; Hermes Tutor</strong></p>
@@ -51,7 +48,7 @@
 		</nav>
 	</footer>
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  {{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
   <script src="/javascripts/typer.js"/></script>
