--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -14,21 +14,19 @@
     <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
     <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read {{user.first}}'s Reviews</a>
     <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
-     {{!-- <div class="card-footer text-muted text-right">
-          <span class="points-span">{{user.points}} points </span>
+     <div class="card-footer text-muted text-right">
+          <span class="points-span">{{user.voteTotal}} points </span>
 
           <div class="btn-group btn-group-sm">
-            <form action="/users/{{user.id}}" method="post" class="inline-form">
-            <input type="hidden" name="points" id="post-points" value="-1">
-            <button type="submit" class="downvote-button">-</button>
+            <form class="user-vote user-vote-up inline-form" data-id="{{user._id}}">
+            <button type="submit" class="btn-success upvote-button">+</button>
           </form>
 
-          <form action="/users/{{user.id}}" method="post" class="inline-form">
-            <input type="hidden" name="points" id="post-points" value="1">
-            <button type="submit" class="upvote-button">+</button>
+          <form class="user-vote user-vote-down inline-form" data-id="{{user._id}}">
+            <button type="submit" class=" btn-danger downvote-button">-</button>
           </form>
           </div>
-        </div> --}}
+        </div>
     
     </div>
     {{!-- <div class='image-links'>
