--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <div class='text-center cardbox page'>
 		<div class='container-fluid justify-content-center'>
 			<div class='text-center'>
-				<h1>Hermes Tutor
+				<h1>TutorMont
                     <span class="typer" id="main" data-words="is great,is fun,is lightweight,is easy" data-colors="black" data-delay="100" data-deleteDelay="1000"></span>
                     <span class="cursor" data-owner="main"></span>
                 </h1>
@@ -18,7 +18,7 @@
                     <div class='element'></div>
             <div>
                 <form method='get' action='/users' class='justify-content-center card-body'>
-                    <input type='text' class='form-control' placeholder='Search for a Tutor' name='search'>
+                    <input type='text' class='form-control' placeholder='Search a name or class' name='search'>
                     <div class='searchbar'>
                     <button type='submit' class='btn btn-primary btn-lg' name="search_type" value='name' style='width:100px;'><i class='fa fa-search'></i></button>   
                     </div>
