--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -12,7 +12,7 @@
     <script src="/javascripts/acc.js"/></script>
   </head>
   <body>
-  
+  <div>
   <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-#7daeca">
     <div class="container-fluid navbar-container">
       <div class="left-nav">
@@ -29,16 +29,17 @@
       </div>
     </div>
   </nav>
+  </div>
     {{{body}}}
   <footer class='text-center bottom-nav'>
-	  <nav class='navbar fixed-bottom navbar-light bg-#7daeca navbar-expand-lg'>
+	  <nav class='navbar fixed-bottom navbar-light bg-#7daeca'>
 			<div class='container-fluid'>
 				<div class='navbar-text'>
-					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; Hermes Tutor</strong></p>
+					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; TutorMont</strong></p>
 					<a href='#' class='navbar-link custom'><i class='fa fa-facebook'></i></a>
 					<a href='#' class='navbar-link custom'><i class='fa fa-google'></i></a>
 					<a href='#' class='navbar-link custom'><i class='fa fa-twitter'></i></a>
-          </div>
+        </div>
 				<div class='navbar-text navbar-right'> 
 					<a href='#' class='navbar-link custom'>Site Map</a>
 					<a href='#' class='navbar-link custom'>Contact Us</a>
