--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 		<div class='container-fluid justify-content-center'>
 			<div class='text-center'>
 				<h1>TutorMont
-                    <span class="typer" id="main" data-words="is great,is fun,is lightweight,is easy" data-colors="black" data-delay="100" data-deleteDelay="1000"></span>
+                    <span class="typer" id="main" data-words="is new,is fun,is innovative," data-colors="rainbow" data-delay="100" data-deleteDelay="1000"></span>
                     <span class="cursor" data-owner="main"></span>
                 </h1>
                 
