--- a/views/reviews/show.hbs
+++ b/views/reviews/show.hbs
@@ -1,27 +1,4 @@
-{{!-- <div class="row">
-    <div class="col">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb review-breadcrumb">
-                <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Review</li>
-            </ol>
-        </nav>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col">
-        <h5 class="text-muted">{{review.movieName}}</h5>
-        <h2>{{review.title}} <span class="badge badge-rating">{{review.rating}}</span></h2>
-    </div>
-</div>
-
-<div class="row">
-    <div class="col">
-        <p>{{review.body}}</p>
-    </div>
-</div> --}}
-<div class='review-show-page'>
+{{!-- <div class='review-show-page'>
 <div class='review-head'>
     <div class='text-center review-header'>
         <h2>Reviews</h2>
@@ -40,5 +17,30 @@
     </div>
     {{/each}}
     </div>
+</div>
+</div> --}}
+<div class='review-show-page'>
+<div class='review-head'>
+    <div class='text-center review-header'>
+        <h2>Reviews</h2>
+    </div>
+    {{#if reviews}}
+    <div class='review-container container'>
+    {{#each reviews as |review|}}
+    <div class='review-body-container'>
+    <div class='review-container-body'>
+    <div class='review-body'>
+    <br>
+    <p class='review-post'>{{review.body}}</p>
+    <hr>
+    <p class='review-time'>Posted {{review.createdAt}}</p>
+    </div>
+    </div>
+    </div>
+    {{/each}}
+    </div>
+    {{else}}
+    <h3>No Reviews have been posted on this tutor<a href='/users/{{user._id}}/reviews/'>Go back to {{user.first}}'s profile</a></h3>
+    {{/if}}
 </div>
 </div>
