--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -1,4 +1,4 @@
-<form action="/users/{{user.id}}" method="post">
+<form action="/users/{{user.id}}" method="post" enctype="multipart/form-data">
 
 <div class="container-fluid section header">
     <div class="signup-content">
@@ -15,6 +15,8 @@
         <input type="tel" id="user-tel" name="tel" class="form-control" value="{{user.tel}}" autocomplete="off">
 
         <input type="text" id="user-school" name="school" class="form-control" value="{{user.school}}" autocomplete="off">
+
+        <input type="file" name="imageUrl" id='user-image' class='form-control' value="{{user.imageUrl}}" placeholder="Please Upload an Image">
 
         <div class='text-center' id='tutor-input'>
     
