--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -10,29 +10,11 @@
     <p class='card-text'>{{user.email}}</p>
     <p class='card-text'>{{user.tel}}</p>
     <p class='card-text'>{{user.class}}</p>
+    <div class="btn-group-vertical">
     <a href='/users/{{user._id}}/edit' class='btn btn-dark'>Edit Profile</a>
     <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read Your Reviews</a>
-     {{!-- <div class="card-footer text-muted text-right">
-          <span class="points-span">{{user.points}} points </span>
-
-          <div class="btn-group btn-group-sm">
-                <form action="/users/{{user.id}}" method="post" class="inline-form">
-                    <input type="hidden" name="points" id="post-points" value="1">
-                    <button type="submit" class="upvote-button">+</button>
-                </form>
-
-                <form action="/users/{{user.id}}" method="post" class="inline-form">
-                    <input type="hidden" name="points" id="post-points" value="-1">
-                    <button type="submit" class="downvote-button">-</button>
-                </form>
-          </div>
-        </div>
-    
     </div>
-    <div class='image-links'>
-      <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
-      <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
-  </div> --}}
   </div>
+</div>
 </div>
 </div>
