--- a/views/reviews/show.hbs
+++ b/views/reviews/show.hbs
@@ -40,7 +40,9 @@
     {{/each}}
     </div>
     {{else}}
-    <h3>No Reviews have been posted on this tutor<a href='/users/{{user._id}}/reviews/'>Go back to {{user.first}}'s profile</a></h3>
+    <div class='justify-content-center'>
+    <h3>No Reviews have been posted on this tutor <a href='/'>Try another search</a></h3>
+    </div>
     {{/if}}
 </div>
 </div>
