--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -2,7 +2,7 @@
 <div class='container-profile'>
   <div class='container-profile2'>
     <div class='image-links image'>
-    <img src="{{user.imageUrl}}" alt="" class='image-fluid' style='border-radius: 100px;'>
+    <img src="https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909__340.png" alt="" class='image-fluid' style='border-radius: 100px;'>
     </div>
     <div class='tutor-info'>
       <h3 class="card-title">{{user.first}} {{user.last}}</h3>
