--- a/views/reviews/show.hbs
+++ b/views/reviews/show.hbs
@@ -40,7 +40,7 @@
     {{/each}}
     </div>
     {{else}}
-    <h3>No Reviews have been posted on this tutor<a href='/users/{{user._id}}/reviews/'>Go back to {{user.first}}'s profile</a></h3>
+    <h3>No Reviews have been posted on this tutor</h3>
     {{/if}}
 </div>
 </div>
