--- a/views/users/edit.hbs
+++ b/views/users/edit.hbs
@@ -2,9 +2,9 @@
 
 <div class="container-fluid section header">
     <div class="signup-content">
-        <h2 class="login-label text-center">Edit Profile</h2>
+        <h2 class="login-label text-center" style='margin-top: 60px;'>Edit Profile</h2>
 
-        <div class="form-group text-center">
+        <div class="form-group text-center label-test">
 
         <input type="text" id="user-first-name" name="first" class="form-control" value="{{user.first}}" autocomplete="off">
 
