--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,24 +1,32 @@
-* {
-  margin-top: 0;
+html {
+  height: 80%;
 }
 body {
   font: 14px "Cambria", Helvetica, Arial, sans-serif;
   color: black;
-  background-color: #f2f4f7; 
-  /* height: 880px; */
+  background-color: #f2f4f7;
+  height: 100%;
 }
 nav {
   background-color: #7daeca;
 }
 
+a {
+  text-decoration: none;
+}
+
 .navbar-link {
-  font-size: 20px;
+  font-size: 18px;
+}
+
+.navbar-text {
+  font-size: 18px;
 }
 
 #user-classes {
   display: none;
-  width:60%; 
-  margin: auto; 
+  width:60%;
+  margin: auto;
   margin-bottom: 15px;
 }
 
@@ -32,77 +40,37 @@ nav {
 .signup {
   padding-bottom: 27px;
 }
-.homepage {
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
-  align-items: center;
-}
-.searchbar {
-  padding-top: 40px;
-}
-.page {
-  padding-top: 15px;
-}
-.cardbox {
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
-  align-items: center;  
-}
- .card {
-  background-color: rgba(231, 231, 243, 0.699);
-  margin-top: 20px;
- }
-a {
-  color: #00B7FF;
+
+.login-box {
+  padding-top: 200px;
+  padding-bottom:200px;
+
 }
 
-.card-self {
-  width: 525px;
-  margin: auto;
-  border: 1px solid #7daeca;
-  border-radius: 5px;
-  color:#7daeca;
-  
-}
-.card-summary {
-  padding-left: 10px;
-  margin: auto;
-  border-radius: 5px;
-  /* background-color: #680707; */
-  margin: 2%; 
-  height: 20em;
-  /* width: 80%; */
-  text-align: center;
-  
+.tutor-show img {
   display: flex;
-  justify-content: center;
-  flex-direction: row;
-  align-items: center;
-  overflow: hidden
+ justify-content: center;
+ align-items: center;
+ height: 95%;
+ width: 95%;
+ object-fit: contain;
+  margin-top: 1em;
 }
 
+.img-fluid {
+  max-width: 100%;
+  height: auto;
+}
 .custom{
   margin: 5px;
 }
 
-.label-test {
-  width:60%; 
-  margin: auto;
-  margin-bottom: 15px;
-}
 
 .signup-content>div>input {
   margin:auto;
   margin-bottom: 15px;
 }
 
-/* .signup-content>div>input{
-  width:60%; 
-  margin: auto; 
-  margin-bottom: 15px;
-} */
 
 #tutor-input{
   display: flex;
@@ -113,48 +81,13 @@ a {
 }
 
 #tutor-input>*{
-  margin: 10px;
+  margin: 5px;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
 
-.parent-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-.container-profile {
-  display: grid;
-  width: 80%;
-  height: 100%;
-  grid-template: 4fr 4fr / 1fr;
-  justify-content: center;
-}
-
-.container-profile2 {
-  display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-columns: 1fr 1fr;
-}
-
-.image {
-  padding-left: 200px;
-  padding-top: 250px;
-  padding-bottom:8px;
-  max-width: 1px;
-  max-height: 1px;
-} 
-
-.image-links {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
 .tutor-info {
   display: flex;
   flex-direction: column;
@@ -166,7 +99,7 @@ a {
 .review-header {
   padding-bottom: 20px;
   padding-top:10px;
- 
+
 }
 .review-head {
   display: flex;
@@ -190,18 +123,192 @@ a {
 
 .review-body-container {
   padding: 10px;
-  background-color: #f2f4f7; 
-   
+  background-color: #f2f4f7;
+
 }
 
 .review-time {
   font-size: 12px;
   margin-top: -15px;
   margin-bottom: -15px;
-  
+
 }
 
 .review-post {
   font-size: 18px;
   line-height: 30px;
+}
+
+.bottom-nav-custom {
+  text-decoration: none;
+  font-color: black;
+}
+
+/* ====================================================New Css ========================================================= */
+
+.section.allTutors {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tutor-body {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 100%;
+
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 0.5s;
+
+  background-color:  #f2f4f7;
+}
+
+@keyframes fadeInOpacity {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+
+.tutors.summary {
+  border-radius: 5px;
+  border: 2px solid #7daeca;
+  /* background-color: #7daeca; */
+  background-image: radial-gradient(circle, #4b8cee, #669df0, #80aef2, #99bff3, #b3cff4);
+  padding: 10px 0;
+  margin: 2%;
+  height: 15em;
+  width: 25%;
+  text-align: center;
+  color: white;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
+}
+
+header>h2 {
+  text-align: center;
+  font-size: 70px;
+  margin-top: 50px;
+  margin-bottom: -60px;
+}
+
+.myContainer {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+.home-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+}
+.homepage {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  height: 100%;
+  width:100%;
+  margin-top: 30px;
+  /* margin-right: 55px; */
+}
+
+.header-message {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+}
+
+.header-body {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  background-color: rgba(231, 231, 243, 0.699);
+  height: 60%;
+  width: 50%;
+  border-radius: 5px;
+}
+
+.search-button {
+  display: flex;
+	flex-direction: row;
+	justify-content: center;
+  border-radius: 10px;
+}
+
+.login-input {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+  background-color: rgba(231, 231, 243, 0.75);
+  border-radius: 10px;
+  height: 70%;
+  width: 45%;
+}
+
+.login-info {
+  display: flex;
+	flex-direction: column;
+	justify-content: center;
+  align-items: center;
+}
+
+.label-test {
+  padding-top: 5px;
+  width:40%;
+  margin: auto;
+  margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.profile-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+
+.show-profile {
+ margin-top: 80px;
+ margin-right: 15em; 
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ height: 90%;
+ width: 75%;
+}
+
+.profile-links {
+  margin-left: 20px;
+}
+
+
+
+.show-profile img {
+  object-fit: contain;
+  border-radius: 100px;
 }
