--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
-    <title>{{title}}</title>
-    <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script src="/javascripts/acc.js"/></script>
-  </head>
-  <body>
-  <div>
-  <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-#7daeca">
-    <div class="container-fluid navbar-container">
-      <div class="left-nav">
-        <a href="/"><img src="/img/logo.png" alt="logo" class="navbar-brand"></a>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css'>
+  <title>{{title}}</title>
+  <link rel='stylesheet' href='/stylesheets/style.css'/>
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="/javascripts/acc.js"/></script>
+</head>
+<body>
+  <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-#7daeca">
+    <div class="left-nav">
+        <a href="/"><img src="/img/log.png" alt="logo" class="navbar-brand"></a>
       </div>
-      <div class="navbar-text">
+   <!-- <a class="navbar-brand" href="/">Tutormont</a>  -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="navbar-text ml-auto">
         {{#if currentUserId}}
           <a class="navbar-link" href="/users/{{currentUserId}}/profile">Profile</a> |
           <a class="navbar-link" href="/logout"><i class='fa fa-sign-out'></i>Log out</a>
@@ -26,27 +29,24 @@
           <a class="navbar-link" href="/login"><i class='fa fa-user'></i>Log in</a> |
           <a class="navbar-link" href="/users/new">Sign up</a>
         {{/if}}
-      </div>
-    </div>
-  </nav>
-  </div>
-    {{{body}}}
-  <footer class='text-center bottom-nav'>
-	  <nav class='navbar fixed-bottom navbar-light bg-#7daeca'>
-			<div class='container-fluid'>
-				<div class='navbar-text'>
-					<p class='navbar-text custom' style='font-size: 18px;'> <strong>Copyright &copy; TutorMont</strong></p>
-					<a href='#' class='navbar-link custom'><i class='fa fa-facebook'></i></a>
-					<a href='#' class='navbar-link custom'><i class='fa fa-google'></i></a>
-					<a href='#' class='navbar-link custom'><i class='fa fa-twitter'></i></a>
         </div>
-				<div class='navbar-text navbar-right'> 
-					<a href='#' class='navbar-link custom'>Site Map</a>
-					<a href='#' class='navbar-link custom'>Contact Us</a>
-					<a href='#' class='navbar-link custom'>Terms &amp; Conditions</a>
-          </div>
-			</div>
-		</nav>
+      </div>
+    </nav>
+    {{{body}}}
+  <footer class='text-center bottom-nav bottom-nav-custom'>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-bottom bg-#7daeca">
+      <ul class='nav navbar-nav'>
+        <li class='navbar-text custom'>Copyright &copy; TutorMont</li>
+ 				<li class='navbar-text custom'><a href='#'><i class='fa fa-facebook'></i></a></li>
+ 				<li class='navbar-text custom'><a href='#'><i class='fa fa-google'></i></a></li>
+ 				<li class='navbar-text custom'><a href='#'><i class='fa fa-twitter'></i></a></li>
+ 			</ul>
+      <ul class='nav navbar-nav ml-auto'>
+					<li class='navbar-text custom'><a href='#'>Site Map</a></li>
+					<li class='navbar-text custom'><a href='#'>Contact Us</a></li>
+					<li class='navbar-text custom'><a href='#'>Terms &amp; Conditions</a></li>
+			</ul>
+    </nav>
 	</footer>
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   {{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
@@ -55,3 +55,4 @@
   <script src="/javascripts/typer.js"/></script>
   </body>
 </html>
+
