--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,18 +1,21 @@
-<form action="/login" method="post">
-  <div class='text-center container-fluid'>
-  <legend style='margin-top: 20px;'>Log in</legend>
-  <div class="form-group">
-    <label style='margin-right: 702px; font-size: 22px' for="user-username">Username</label>
-    <input type="text" style="width:60%; margin: auto; margin-bottom: 15px" name="username" class="form-control" id="user-username" placeholder="username" autocomplete="off">
+<div class='home-container'>
+  <div class='homepage'>
+    <div class='login-input'>
+      <h3>Log-in</h3>
+    <form action='/login' method='post' class='login-form'>
+      <div class='login-info' style='margin-bottom: 15px;'>
+       <input type="text" name="username" class="form-control" id="user-username" placeholder="username" autocomplete="off">
+      </div>
+      <div class='login-info' style='margin-bottom: 15px;'>
+       <input type="password" name="password" class="form-control" id="user-password" placeholder="password" autocomplete="off">
+      </div>
+    <div class='login-submit text-center' style='margin-bottom: 5px;'>
+      <button type="submit" class="btn btn-primary">Log-in</button>
+    </div>
+    <div class='text-center'>
+      <p>Don't have an account? <a href="/users/new">Sign up!</a></p>
+    </div>
+    </form>
+    </div>
   </div>
-
-  <div class="form-group">
-    <label for="user-password" style='margin-right: 705px; font-size: 22px'>Password</label>
-    <input type="password" style="width:60%; margin: auto; margin-bottom: 15px" name="password" class="form-control" id="user-password" placeholder="password" autocomplete="off">
-  </div>
-
-  <div class="text-center">
-    <button type="submit" class="btn btn-primary">Login</button>
-  </div>
-  </div>
-</form>
+</div>
