--- a/views/users/index.hbs
+++ b/views/users/index.hbs
@@ -1,35 +1,20 @@
- 
- <div class="row text-center" style='margin-bottom:15px;'>
-    <div class="col">
-        <h1 class="page-title">Tutors</h1>
-    </div>
-</div>
-
-<div class='row text-center'>
-
 {{#if users}}
-{{#each users as |user| }}
-<div class="col-sm-4 col-lg col-md-4">
-<div class='card-summary'>
-  <div class="card bg-dark text-white card-self">
-  <img class="card-img" src="http://centroauditivomerida.com/wp-content/uploads/2015/08/blue_gradient-wallpaper-1280x720.jpg" alt="Card image">
-  <div class="card-img-overlay text-left" >
-    <h3 class="card-title">{{user.first}} {{user.last}}</h3>
-    <p class="card-text">{{user.school}}</p>
-    <p class='card-text'>{{user.email}}</p>
-    <p class='card-text'>{{user.tel}}</p>
-    <p class='card-text'>{{user.class}}</p>
-  <div>
+<header>
+  <h2>Tutors<h2>
+</header>
+<div class='section allTutors'>
+   <div class='tutor-body'>
+    {{#each users as |user|}}
+    <div class='tutors summary'>
+    <h3 class="tutor-name">{{user.first}} {{user.last}}</h3>
+    <p class="tutor-school">{{user.school}}</p>
+    <p class='tutor-email'>{{user.email}}</p>
+    <p class='tutor-class'>{{user.class}}</p>
     <a href='/users/{{user._id}}' class='btn btn-dark'>View Profile</a>
-</div>
-  </div>
-</div>
-</div>
-</div>
-{{/each}}
-{{else}}
-<div class='justify-content-center' >
-<span><p style='font-size: 20px; margin: auto;'>We found no tutors that matched that search, please try another search. <a href='/'>Go back to search</a></p></span>
-</div>
-{{/if}}
-</div>
+    </div>
+    {{/each}}
+   </div>
+ </div>
+ {{else}}
+ <span class='text-center'><p style='font-size: 20px; margin: auto; margin-top: 100px;'>We found no tutors that matched that search, please try another search. <a href='/'>Go back to search</a></p></span>
+ {{/if}}
