--- a/views/users/show.hbs
+++ b/views/users/show.hbs
@@ -1,39 +1,65 @@
-<div class='parent-container'>
-<div class='container-profile'>
-  <div class='container-profile2'>
-    <div class='image-links image'>
-    <img src="{{user.imageUrl}}" alt="" class='image-fluid' style='border-radius: 100px;'>
+{{#if user.imageUrl}}
+<div class='profile-container'>
+  <div class='show-profile'>
+    <div>
+      <img src='{{user.imageUrl}}' class='show-image gridCentered' style='border-radius: 10px;' height='300px' width='400px'>
     </div>
-    <div class='tutor-info'>
-      <h3 class="card-title">{{user.first}} {{user.last}}</h3>
-    <p class="card-text">{{user.school}}</p>
-    <p class='card-text'>{{user.email}}</p>
-    <p class='card-text'>{{user.tel}}</p>
-    <p class='card-text'>{{user.class}}</p>
-    {{!-- <a href='/users/{{user._id}}/edit' class='btn btn-dark'>Edit Profile</a> --}}
-    <div class="btn-group-vertical">
-    <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
-    <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read {{user.first}}'s Reviews</a>
-    <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
-    </div>
-     <div class="card-footer text-muted text-right">
-          <span class="points-span">{{user.voteTotal}} points </span>
-
-          <div class="btn-group btn-group-sm">
-            <form class="user-vote user-vote-up inline-form" data-id="{{user._id}}">
-            <button type="submit" class="btn-success upvote-button">+</button>
+    <div class='profile-links'>
+      <h3>{{user.first}} {{user.last}}</h3>
+      <p>{{user.school}}</p>
+      <p>{{user.email}}</p>
+      <p>{{user.tel}}</p>
+      <p>{{user.class}}</p>
+      {{!-- <a href='/users/{{user._id}}/edit' class='btn btn-dark'>Edit Profile</a> --}}
+      <div class="btn-group-vertical">
+        <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
+        <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read {{user.first}}'s Reviews</a>
+        <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
+      </div>
+      <div class=''>
+        <span class="points-span">{{user.voteTotal}} points </span>
+        <div class="btn-group btn-group-sm">
+          <form class="user-vote user-vote-up inline-form" data-id="{{user._id}}">
+          <button type="submit" class="btn-success upvote-button">+</button>
           </form>
-
           <form class="user-vote user-vote-down inline-form" data-id="{{user._id}}">
-            <button type="submit" class=" btn-danger downvote-button">-</button>
+          <button type="submit" class=" btn-danger downvote-button">-</button>
           </form>
           </div>
         </div>
     </div>
-    {{!-- <div class='image-links'>
-      <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
-      <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
-  </div> --}}
+    </div>
   </div>
-</div>
-</div>
+  {{else}}
+  <div class='profile-container'>
+  <div class='show-profile'>
+    <div>
+      <img src='https://cdn.pixabay.com/photo/2016/08/08/09/17/avatar-1577909__340.png' class='show-image gridCentered' style='border-radius: 10px;' height='300px' width='400px'>
+    </div>
+    <div class='profile-links'>
+      <h3>{{user.first}} {{user.last}}</h3>
+      <p>{{user.school}}</p>
+      <p>{{user.email}}</p>
+      <p>{{user.tel}}</p>
+      <p>{{user.class}}</p>
+      {{!-- <a href='/users/{{user._id}}/edit' class='btn btn-dark'>Edit Profile</a> --}}
+      <div class="btn-group-vertical">
+        <a href='/users/{{user._id}}/reviews/new' class='btn btn-dark'>Write A Review</a>
+        <a href='/users/{{user._id}}/reviews/' class='btn btn-dark'>Read {{user.first}}'s Reviews</a>
+        <a href='#' class='btn btn-dark'>Send {{user.first}} a Message</a>
+      </div>
+      <div class=''>
+        <span class="points-span">{{user.voteTotal}} points </span>
+        <div class="btn-group btn-group-sm">
+          <form class="user-vote user-vote-up inline-form" data-id="{{user._id}}">
+          <button type="submit" class="btn-success upvote-button">+</button>
+          </form>
+          <form class="user-vote user-vote-down inline-form" data-id="{{user._id}}">
+          <button type="submit" class=" btn-danger downvote-button">-</button>
+          </form>
+          </div>
+        </div>
+    </div>
+    </div>
+  </div>
+  {{/if}}
