Token Schema created and email is now used for login, no usernames

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -11,7 +11,7 @@
 
         <input type="email" id="user-email" name="email" class="form-control" placeholder="*E-mail" autocomplete="off" maxlength="45">
 
-        <input type="text" name="username" class="form-control" id="user-username" placeholder="*Username" maxlength="45" autocomplete="off">
+        <!-- <input type="text" name="username" class="form-control" id="user-username" placeholder="*Username" maxlength="45" autocomplete="off"> -->
 
         <input type="password" id="user-password" name="password" class="form-control" placeholder="*Password" autocomplete="off" maxlength="45">
 
