--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,7 +4,7 @@
       <h3>Log-in</h3>
     <form action='/login' method='post' class='login-form'>
       <div class='login-info' style='margin-bottom: 15px;'>
-       <input type="text" name="username" class="form-control" id="user-username" placeholder="username" autocomplete="off">
+       <input type="email" id="user-email" name="email" class="form-control" placeholder="*E-mail" autocomplete="off" maxlength="45">
       </div>
       <div class='login-info' style='margin-bottom: 15px;'>
        <input type="password" name="password" class="form-control" id="user-password" placeholder="password" autocomplete="off">
