More minor changes

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -4,10 +4,10 @@
       <h3>Log-in</h3>
     <form action='/login' method='post' class='login-form'>
       <div class='login-info' style='margin-bottom: 15px;'>
-       <input type="email" id="user-email" name="email" class="form-control" placeholder="*E-mail" autocomplete="off" maxlength="45">
+       <input type="email" id="user-email" name="email" class="form-control" placeholder="E-mail" autocomplete="off" maxlength="45">
       </div>
       <div class='login-info' style='margin-bottom: 15px;'>
-       <input type="password" name="password" class="form-control" id="user-password" placeholder="password" autocomplete="off">
+       <input type="password" name="password" class="form-control" id="user-password" placeholder="Password" autocomplete="off">
       </div>
     <div class='login-submit text-center' style='margin-bottom: 5px;'>
       <button type="submit" class="btn btn-primary">Log-in</button>
