Changes to stylesheet, tokens, email verification etc

--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,5 +1,7 @@
+<div class='homepage'>
 <h1>{{message}}</h1>
 <h2>{{error.status}}</h2>
 <pre>{{error.stack}}</pre>
 
 <p>This is an error that has occured because you dont have a .edu email</p>
+</div>
