--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -17,7 +17,7 @@
 
         <input type="text" id="user-school" name="school" class="form-control" placeholder="*School" autocomplete="off" maxlength="45">
 
-        <input type="text" id="user-school" name="school" class="form-control" placeholder="*School" autocomplete="off" maxlength="45">
+        <input type="text" id="user-tel" name="tel" class="form-control" placeholder="Phone" autocomplete="off" maxlength="45">
 
         <input type="file" name="imageUrl" id='user-image' class='form-control' placeholder="Please Upload an Image">
 
