--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,23 +53,10 @@ a {
  align-items: center;
  height: 95%;
  width: 95%;
- object-fit: contain;
+ object-fit: cover;
   margin-top: 1em;
 }
 
-.img-fluid {
-  max-width: 100%;
-  height: auto;
-}
-.custom{
-  margin: 5px;
-}
-
-
-.responsive {
-  width: 80%;
-  height: auto;
-}
 .signup-content>div>input {
   margin:auto;
   margin-bottom: 15px;
@@ -101,52 +88,37 @@ a {
 }
 
 .review-header {
-  padding-bottom: 20px;
-  padding-top:10px;
-
+  margin-bottom: 9px;
+  margin-top: 35px;
 }
-.review-head {
+
+.review {
+    background-image: radial-gradient(circle, #c3d7f4, #c9d9f0, #cfdcec, #d6dee9, #dce0e5);
+    border-radius: 10px;
+    margin-bottom: 15px;
+    width: 80%;
+}
+
+.review-body {
+  padding: 5px 10px;
+  font-size: 17px;
+}
+
+.review-time {
+  margin-top: 1px;
+  margin-bottom: 8px;
+  margin-left: 4px;
+  font-size: 12px;
+  line-height: 1px;
+}
+
+.review-new {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.review-container {
-  border: solid;
-  border-color: #7daeca;
-  border-radius: 10px;
-  padding-bottom: 30px;
-}
-/* .review-body {
-   border: solid;
-  border-color: #7daeca;
-  border-radius: 10px;
-  padding-bottom: 10px;
-  padding-top: 10px; 
-}*/
 
-.review-body-container {
-  padding: 10px;
-  background-color: #f2f4f7;
-
-}
-
-.review-time {
-  font-size: 12px;
-  margin-top: -15px;
-  margin-bottom: -15px;
-
-}
-
-.review-post {
-  font-size: 18px;
-  line-height: 30px;
-}
-
-.bottom-nav-custom {
-  text-decoration: none;
-  color: black;
-}
 
 /* ====================================================New Css ========================================================= */
 
@@ -228,7 +200,7 @@ header>h2 {
 	justify-content: center;
   align-items: center;
   height: 100%;
-  width:100%;
+  width: 100%;
   margin-top: 30px;
   /* margin-right: 55px; */
 }
@@ -298,7 +270,7 @@ header>h2 {
 
 .show-profile {
  margin-top: 80px;
- margin-right: 15em; 
+ margin-right: 15em;
  display: flex;
  flex-direction: row;
  justify-content: center;
@@ -310,9 +282,7 @@ header>h2 {
   margin-left: 20px;
 }
 
-
-
 .show-profile img {
-  object-fit: contain;
+  object-fit: cover;
   border-radius: 100px;
 }
