--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,15 +37,15 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-bottom bg-#7daeca">
       <ul class='nav navbar-nav'>
         <li class='navbar-text custom'>Copyright &copy; TutorMont</li>
- 				<li class='navbar-text custom'><a href='#'><i class='fa fa-facebook'></i></a></li>
+ 				<!-- <li class='navbar-text custom'><a href='#'><i class='fa fa-facebook'></i></a></li>
  				<li class='navbar-text custom'><a href='#'><i class='fa fa-google'></i></a></li>
- 				<li class='navbar-text custom'><a href='#'><i class='fa fa-twitter'></i></a></li>
+ 				<li class='navbar-text custom'><a href='#'><i class='fa fa-twitter'></i></a></li> -->
  			</ul>
-      <ul class='nav navbar-nav ml-auto'>
+      <!-- <ul class='nav navbar-nav ml-auto'>
 					<li class='navbar-text custom'><a href='#'>Site Map</a></li>
 					<li class='navbar-text custom'><a href='#'>Contact Us</a></li>
 					<li class='navbar-text custom'><a href='#'>Terms &amp; Conditions</a></li>
-			</ul>
+			</ul> -->
     </nav>
 	</footer>
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -55,4 +55,3 @@
   <script src="/javascripts/typer.js"/></script>
   </body>
 </html>
-
