New CSS media query

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -2,7 +2,7 @@
  <div class='homepage'>
   <div class='header-message'>
    <h1 class='text-center'>TutorMont
-     <span class="typer" id="main" data-words="is new,is fun,is innovative," data-colors="#" data-delay="100" data-deleteDelay="1000"></span>
+     <span class="typer" id="main" data-words="is new,is fun,is great," data-colors="#" data-delay="100" data-deleteDelay="1000"></span>
      <span class="cursor" data-owner="main"></span>
    </h1>
     <p class='text-center'>Platform connecting students with tutoring needs, to those who can tutor them.</p>
