--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -241,6 +241,19 @@ header>h2 {
   width: 45%;
 }
 
+@media only screen and (max-width: 750px){
+  .login-input {
+    display: flex;
+  	flex-direction: column;
+  	justify-content: center;
+    align-items: center;
+    background-color: rgba(231, 231, 243, 0.75);
+    border-radius: 10px;
+    height: 60%;
+    width: 80%;
+  }
+}
+
 .login-info {
   display: flex;
 	flex-direction: column;
