--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <div class='home-container'>
   <div class='homepage'>
-    <div class='login-input'>
+    <div class='login-input text-center'>
       <h3>Log-in</h3>
     <form action='/login' method='post' class='login-form'>
       <div class='login-info' style='margin-bottom: 15px;'>
