--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -127,10 +127,12 @@ a {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  width: 100%;
 }
 
 .tutor-body {
   display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
@@ -153,6 +155,51 @@ a {
 	}
 }
 
+@media only screen and (max-width: 850px) {
+  .tutor-body {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    width: 80em;
+
+    opacity: 1;
+    animation-name: fadeInOpacity;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration: 0.5s;
+    background-color:  #f2f4f7;
+  }
+
+  @keyframes fadeInOpacity {
+  	0% {
+  		opacity: 0;
+  	}
+  	100% {
+  		opacity: 1;
+  	}
+  }
+
+  .tutors.summary {
+    border-radius: 5px;
+    border: 2px solid #7daeca;
+    /* background-color: #7daeca; */
+    background-image: radial-gradient(circle, #4b8cee, #669df0, #80aef2, #99bff3, #b3cff4);
+    padding: 10px 0;
+    margin: 2%;
+    height: 15em;
+    width: 50%;
+    text-align: center;
+    color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    overflow: hidden;
+  }
+}
+
 .tutors.summary {
   border-radius: 5px;
   border: 2px solid #7daeca;
@@ -160,7 +207,7 @@ a {
   background-image: radial-gradient(circle, #4b8cee, #669df0, #80aef2, #99bff3, #b3cff4);
   padding: 10px 0;
   margin: 2%;
-  height: 15em;
+  height: 17em;
   width: 25%;
   text-align: center;
   color: white;
@@ -302,6 +349,18 @@ header>h2 {
  justify-content: center;
  height: 90%;
  width: 75%;
+}
+
+@media only screen and (max-width: 750px) {
+  .show-profile {
+   margin-top: 80px;
+   margin-right: 15em;
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   height: 110%;
+   width: 75%;
+  }
 }
 
 .profile-links {
