--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -41,11 +41,11 @@
  				<li class='navbar-text custom'><a href='#'><i class='fa fa-google'></i></a></li>
  				<li class='navbar-text custom'><a href='#'><i class='fa fa-twitter'></i></a></li> -->
  			</ul>
-      <!-- <ul class='nav navbar-nav ml-auto'>
-					<li class='navbar-text custom'><a href='#'>Site Map</a></li>
-					<li class='navbar-text custom'><a href='#'>Contact Us</a></li>
-					<li class='navbar-text custom'><a href='#'>Terms &amp; Conditions</a></li>
-			</ul> -->
+       <ul class='nav navbar-nav ml-auto'>
+					<li class='navbar-text custom'><a href='/privacy-policy'>Privacy Policy</a></li>
+					<!-- <li class='navbar-text custom'><a href='#'>Contact Us</a></li>
+					<li class='navbar-text custom'><a href='#'>Terms &amp; Conditions</a></li> -->
+			</ul>
     </nav>
 	</footer>
      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
