Little more change to privacy policy

--- a/views/privacy-policy.hbs
+++ b/views/privacy-policy.hbs
@@ -1,4 +1,4 @@
-<div style='margin:auto; margin-top: 15px; margin-bottom: 15px;'>
+<div style='margin:auto; margin-top: 15px; margin-bottom: 15px'>
 <h1>Privacy Policy</h1>
 <p>Effective date: October 06, 2018</p>
 <p>Tutormont ("us", "we", or "our") operates the https://tutormont.herokuapp.com website (the "Service").</p>
