--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,7 +1,7 @@
 <main class='home-container'>
  <div class='homepage'>
   <div class='header-message'>
-   <h1 class='text-center'>TutorMont
+   <h1 class='text-center' style='font-family: Cabin;'>TutorMont
      <span class="typer" id="main" data-words="is new,is fun,is great," data-colors="#" data-delay="100" data-deleteDelay="1000"></span>
      <span class="cursor" data-owner="main"></span>
    </h1>
